[gd_scene load_steps=13 format=2]

[ext_resource path="res://menu/kanji_board.gd" type="Script" id=1]
[ext_resource path="res://battle/battle_btm_layer_black.png" type="Texture" id=2]
[ext_resource path="res://fonts/NotoSansJP-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/NotoSansJP-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://menu/kanji_bg.png" type="Texture" id=5]
[ext_resource path="res://menu/kanji_answer_bg.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[node name="kanji_submenu" type="Node2D"]
script = ExtResource( 1 )

[node name="answer_mode_bg" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.509804 )
texture = ExtResource( 2 )
centered = false

[node name="kanji_background" type="Sprite" parent="."]
position = Vector2( 544, 536 )
texture = ExtResource( 5 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 256.0
margin_top = 240.0
margin_right = 840.0
margin_bottom = 424.0
custom_constants/hseparation = 16
columns = 3

[node name="hint" type="Label" parent="."]
margin_left = 1240.0
margin_top = 160.0
margin_right = 1577.0
margin_bottom = 222.0
theme = SubResource( 4 )
text = "Heavenly Maiden"

[node name="answer_bg" type="Sprite" parent="."]
position = Vector2( 1408, 536 )
texture = ExtResource( 6 )

[node name="answer" type="VBoxContainer" parent="."]
margin_left = 1360.0
margin_top = 304.0
margin_right = 1460.0
margin_bottom = 747.0

[node name="kanji0" type="Label" parent="answer"]
margin_right = 100.0
margin_bottom = 145.0
theme = SubResource( 10 )

[node name="kanji1" type="Label" parent="answer"]
margin_top = 149.0
margin_right = 100.0
margin_bottom = 294.0
theme = SubResource( 10 )

[node name="kanji2" type="Label" parent="answer"]
margin_top = 298.0
margin_right = 100.0
margin_bottom = 443.0
theme = SubResource( 10 )

[node name="submit" type="Button" parent="."]
margin_left = 1256.0
margin_top = 888.0
margin_right = 1356.0
margin_bottom = 929.0
theme = SubResource( 12 )
text = "OK"

[node name="clear" type="Button" parent="."]
margin_left = 1472.0
margin_top = 888.0
margin_right = 1572.0
margin_bottom = 929.0
theme = SubResource( 12 )
text = "CLEAR"

[node name="close" type="Button" parent="."]
margin_left = 1704.0
margin_top = 968.0
margin_right = 1804.0
margin_bottom = 1009.0
theme = SubResource( 12 )
text = "CLOSE"

[connection signal="button_down" from="submit" to="." method="submit_answer"]
[connection signal="button_down" from="clear" to="." method="clear_answer"]
[connection signal="pressed" from="close" to="." method="close"]
